Added OAuth2 Security and Student rest endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,6 @@ employee.lastName.empty=Last name cannot be null
 
 logging.pattern.console=%date{HH:mm:ss.SSS} [%20t] %m %n
 
+spring.main.allow-bean-definition-overriding=true
+
 
